Failpoint in out_stale_unique_key.js can trigger on other threads running inserts/updates

XMLWordPrintableJSON

    • Fully Compatible
    • 25
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The test is setting a failpoint deep in the batch write path, and waiting for a $out to hit it. However, in some cases there are other threads that write to internal collections such as config.cache.collections which will also hang on the failpoint. Though there's no obvious side effects of this, the test did not intend for that behavior.

            Assignee:
            Nicholas Zolnierz
            Reporter:
            Nicholas Zolnierz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: