SERVER-38191 Enforce restriction on namespace for failpoints in write_ops