src/mongo/db/curop_failpoint_helpers.h
@@ -55,6 +55,7 @@ public:
                                           OperationContext* opCtx,
                                           const std::string& curOpMsg,
                                           const std::function<void(void)>& whileWaiting = nullptr,
-                                          bool checkForInterrupt = false);
+                                          bool checkForInterrupt = false,
+                                          boost::optional<NamespaceString> nss = boost::none);
 };
 }
