src/mongo/db/ops/write_ops_exec.cpp
@@ -355,12 +355,14 @@ bool insertBatchAndHandleErrors(OperationContext* opCtx,
                 &hangDuringBatchInsert,
                 opCtx,
                 "hangDuringBatchInsert",
-                []() {
-                    log() << "batch insert - hangDuringBatchInsert fail point enabled. Blocking "
-                             "until fail point is disabled.";
+                [wholeOp]() {
+                    log()
+                        << "batch insert - hangDuringBatchInsert fail point enabled for namespace "
+                        << wholeOp.getNamespace() << ". Blocking "
+                                                     "until fail point is disabled.";
                 },
-                true  // Check for interrupt periodically.
-                );
+                true,  // Check for interrupt periodically.
+                wholeOp.getNamespace());
 
             if (MONGO_FAIL_POINT(failAllInserts)) {
                 uasserted(ErrorCodes::InternalError, "failAllInserts failpoint active!");
@@ -568,11 +570,18 @@ static SingleWriteResult performSingleUpdateOp(OperationContext* opCtx,
 
     boost::optional<AutoGetCollection> collection;
     while (true) {
+        const auto checkForInterrupt = false;
         CurOpFailpointHelpers::waitWhileFailPointEnabled(
-            &hangDuringBatchUpdate, opCtx, "hangDuringBatchUpdate", [opCtx]() {
-                log() << "batch update - hangDuringBatchUpdate fail point enabled. Blocking until "
+            &hangDuringBatchUpdate,
+            opCtx,
+            "hangDuringBatchUpdate",
+            [ns]() {
+                log() << "batch update - hangDuringBatchUpdate fail point enabled for nss " << ns
+                      << ". Blocking until "
                          "fail point is disabled.";
-            });
+            },
+            checkForInterrupt,
+            ns);
 
         if (MONGO_FAIL_POINT(failAllUpdates)) {
             uasserted(ErrorCodes::InternalError, "failAllUpdates failpoint active!");
